add OpenJDK upgrade