@@ -1,5 +1,10 @@
 # Upgrades #
 
+ You can check the current version using the API command:
+```bash
+curl -u $USER:$PASSWORD -X GET http://localhost:9200/license
+```
+
 ## Upgrade from 6.x
 
 The update includes packages:
@@ -309,7 +314,7 @@ The update includes packages:
       ```
 
 1. Start ITRS Log Analytics GUI
-    
+   
     Add service:
     - Kibana
     - Cerebro
@@ -330,7 +335,7 @@ The update includes packages:
     Created symlink from /etc/systemd/system/multi-user.target.wants/cerebro.service to /usr/lib/systemd/system/cerebro.service.
     Created symlink from /etc/systemd/system/multi-user.target.wants/alert.service to /usr/lib/systemd/system/alert.service.
     ```
-
+    
     ```bash
     systemctl start kibana cerebro alert
     systemctl status kibana cerebro alert
@@ -340,24 +345,120 @@ The update includes packages:
      Main PID: 12399 (node)
        CGroup: /system.slice/kibana.service
                └─12399 /usr/share/kibana/bin/../node/bin/node --no-warnings --max-http-header-size=65536 /usr/share/kibana/bin/../src/cli -c /etc/kibana/kibana.yml
-
+    
     Mar 19 14:46:52 migration-01 systemd[1]: Started Kibana.
-
+    
     ● cerebro.service - Cerebro
        Loaded: loaded (/usr/lib/systemd/system/cerebro.service; enabled; vendor preset: disabled)
        Active: active (running) since Thu 2020-03-19 14:46:52 CET; 2s ago
      Main PID: 12400 (java)
        CGroup: /system.slice/cerebro.service
                └─12400 java -Duser.dir=/opt/cerebro -Dconfig.file=/opt/cerebro/conf/application.conf -cp -jar /opt/cerebro/lib/cerebro.cerebro-0.8.4-launcher.jar
-
+    
     Mar 19 14:46:52 migration-01 systemd[1]: Started Cerebro.
-
+    
     ● alert.service - Alert
        Loaded: loaded (/usr/lib/systemd/system/alert.service; enabled; vendor preset: disabled)
        Active: active (running) since Thu 2020-03-19 14:46:52 CET; 2s ago
      Main PID: 12401 (elastalert)
        CGroup: /system.slice/alert.service
                └─12401 /opt/alert/bin/python /opt/alert/bin/elastalert
-
+    
     Mar 19 14:46:52 migration-01 systemd[1]: Started Alert.
+    ```
+## Changing OpenJDK version
+
+### Logstash
+
+OpenJDK 11 is supported by Logstash from version 6.8 so if you have an older version of Logstash you must update it.
+
+To update Logstash, follow the steps below:
+
+1. Back up the following files
+	
+- /etc/logstash/logstash.yml
+- /etc/logstash/piplines.yml
+- /etc/logstash/conf.d
+
+2. Use the command to check custom Logstash plugins:
+
+    ```bash
+    /usr/share/bin/logstash-plugin list --verbose
+    ```
+and note the result
+
+3. Install a newer version of Logstash according to the instructions:
+
+	https://www.elastic.co/guide/en/logstash/6.8/upgrading-logstash.html
+	
+	or 
+	
+	https://www.elastic.co/guide/en/logstash/current/upgrading-logstash.html
+
+4. Verify installed plugins:
+
+    ```bash
+    /usr/share/bin/logstash-plugin list --verbose
+    ```
+
+5. Install the missing plugins if necessary:
+
+    ```bash
+    /usr/share/bin/logstash-plugin install plugin_name
+    ```
+
+6. Run Logstash using the command:
+
+    ```bash
+    systemctl start logstash
+    ```
+
+### Elasticearch
+
+ITRS Log Analytics can use OpenJDK version 10 or later.
+If you want to use OpenJSK version 10 or later, configure the Elasticsearch service as follows:
+
+1. After installing OpenJDK, select the correct version that Elasticsearch will use:
+
+    ```bash
+    alternative --config java
+    ```
+
+2. Open the `/etc/elasticsearch/jvm.options` file in a text editor:
+
+    ```bash
+    vi /etc/elasticsearch/jvm.options
+    ```
+
+3. Disable the OpenJDK version 8 section:
+
+    ```bash
+    ## JDK 8 GC logging
+
+    #8:-XX:+PrintGCDetails
+    #8:-XX:+PrintGCDateStamps
+    #8:-XX:+PrintTenuringDistribution
+    #8:-XX:+PrintGCApplicationStoppedTime
+    #8:-Xloggc:/var/log/elasticsearch/gc.log
+    #8:-XX:+UseGCLogFileRotation
+    #8:-XX:NumberOfGCLogFiles=32
+    #8:-XX:GCLogFileSize=64m
+    ```
+
+4. Enable the OpenJDK version 11 section
+
+    ```bash
+    ## G1GC Configuration
+    # NOTE: G1GC is only supported on JDK version 10 or later.
+    # To use G1GC uncomment the lines below.
+    10-:-XX:-UseConcMarkSweepGC
+    10-:-XX:-UseCMSInitiatingOccupancyOnly
+    10-:-XX:+UseG1GC
+    10-:-XX:InitiatingHeapOccupancyPercent=75
+    ```
+
+5. Restart the Elasticsearch service
+
+    ```bash
+    systemctl restart elasticsearch
     ```
